haicode/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haicode-be
  namespace: haicode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haicode-be
  template:
    metadata:
      labels:
        app: haicode-be
    spec:
      containers:
      - name: haicode-be
        image: localhost:32000/haicode-be
        ports:
        - containerPort: 8080
