haicode/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haicode-be-service
  namespace: haicode
spec:
  selector:
    app: haicode-be
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
