haicode/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haicode-be-ingress
  namespace: haicode
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
    - host: "haicode-be.lilhuy-server.uk"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: haicode-be-service
                port:
                  number: 8080
